src/test/deca/context/invalid/fieldSameName.deca
class A{
	protected int a;
	int a;
}
